--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,39 +8,17 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">11,597,260</td><td></td><td></td></tr>
+<tr><th colspan="8">Smoke Test Suite</th></tr>
+<tr><td><a href="#t0">Smoke Tests</a></td><td class="num">7</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">79,649</td><td>smoke</td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">tests.Maximum_Cases_Allowed_Test</td><td><a href="#m0">Verfiy_Max_Cases_Allowed</a></td><td rowspan="1">1745821126050</td><td rowspan="1">11578972</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Smoke Test Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Smoke Tests &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">NCPR.CaseDetailViewValidations</td><td><a href="#m0">DetailViewComponents</a></td><td rowspan="1">1746612085602</td><td rowspan="1">3090</td></tr><tr class="passedeven"><td><a href="#m1">test_verify_pdf_data_matches_ui</a></td><td rowspan="1">1746612088694</td><td rowspan="1">4002</td></tr><tr class="passedodd"><td rowspan="2">NCPR.CaseOperations</td><td><a href="#m2">createCaseAndUploadFile</a></td><td rowspan="1">1746612039169</td><td rowspan="1">39805</td></tr><tr class="passedodd"><td><a href="#m3">deleteCreatedCase</a></td><td rowspan="1">1746612078979</td><td rowspan="1">4829</td></tr><tr class="passedeven"><td rowspan="1">NCPR.ComponentVerificationTest</td><td><a href="#m4">verify_components_load_status</a></td><td rowspan="1">1746612094941</td><td rowspan="1">3815</td></tr><tr class="passedodd"><td rowspan="2">NCPR.NCPR_HomePage_Validation</td><td><a href="#m5">loginFromFundTrail</a></td><td rowspan="1">1746612029003</td><td rowspan="1">6024</td></tr><tr class="passedodd"><td><a href="#m6">ncrpLoginLogout</a></td><td rowspan="1">1746612035044</td><td rowspan="1">1932</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">tests.Maximum_Cases_Allowed_Test#Verfiy_Max_Cases_Allowed</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: &quot;Expected text not found! Actual text: &quot; + actualText
-	at tests.Maximum_Cases_Allowed_Test.Verfiy_Max_Cases_Allowed(Maximum_Cases_Allowed_Test.java:17)
-	at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:103)
-	at java.base/java.lang.reflect.Method.invoke(Method.java:580)
-	at org.testng.internal.invokers.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:141)
-	at org.testng.internal.invokers.TestInvoker.invokeMethod(TestInvoker.java:687)
-	at org.testng.internal.invokers.TestInvoker.invokeTestMethod(TestInvoker.java:230)
-	at org.testng.internal.invokers.MethodRunner.runInSequence(MethodRunner.java:63)
-	at org.testng.internal.invokers.TestInvoker$MethodInvocationAgent.invoke(TestInvoker.java:995)
-	at org.testng.internal.invokers.TestInvoker.invokeTestMethods(TestInvoker.java:203)
-	at org.testng.internal.invokers.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:154)
-	at org.testng.internal.invokers.TestMethodWorker.run(TestMethodWorker.java:134)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1596)
-	at org.testng.TestRunner.privateRun(TestRunner.java:741)
-	at org.testng.TestRunner.run(TestRunner.java:616)
-	at org.testng.SuiteRunner.runTest(SuiteRunner.java:421)
-	at org.testng.SuiteRunner.runSequentially(SuiteRunner.java:413)
-	at org.testng.SuiteRunner.privateRun(SuiteRunner.java:373)
-	at org.testng.SuiteRunner.run(SuiteRunner.java:312)
-	at org.testng.SuiteRunnerWorker.runSuite(SuiteRunnerWorker.java:52)
-	at org.testng.SuiteRunnerWorker.run(SuiteRunnerWorker.java:95)
-	at org.testng.TestNG.runSuitesSequentially(TestNG.java:1274)
-	at org.testng.TestNG.runSuitesLocally(TestNG.java:1208)
-	at org.testng.TestNG.runSuites(TestNG.java:1112)
-	at org.testng.TestNG.run(TestNG.java:1079)
-	at org.testng.remote.AbstractRemoteTestNG.run(AbstractRemoteTestNG.java:115)
-	at org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:293)
-	at org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:91)
-</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Smoke Tests</h2><h3 id="m0">NCPR.CaseDetailViewValidations#DetailViewComponents</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">NCPR.CaseDetailViewValidations#test_verify_pdf_data_matches_ui</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">NCPR.CaseOperations#createCaseAndUploadFile</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">NCPR.CaseOperations#deleteCreatedCase</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">NCPR.ComponentVerificationTest#verify_components_load_status</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m5">NCPR.NCPR_HomePage_Validation#loginFromFundTrail</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m6">NCPR.NCPR_HomePage_Validation#ncrpLoginLogout</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
